--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -209,6 +209,13 @@
                 </a>
             </div>
 
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Others/ManagementReport")">
+                    <img src="@Url.Content("~/Content/images/managemen_report.png")" class="center-block" />
+                    <p class="text-center">经营报表统计</p>
+                </a>
+            </div>
+
         </div>
     </div>
 </div>
