--- a/EmpInfo/Views/Apply/BeginApplyUC.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyUC.cshtml
@@ -200,7 +200,7 @@
                             <span id="customerNameSpan" class="text-danger small"></span>
                         </span>
                     </div>
-                    @*<div class="b-div">
+                    <div class="b-div">
                         <span class="b-label">
                             生产事业部:
                         </span>
@@ -212,7 +212,7 @@
                                 }
                             </select>
                         </span>
-                    </div>*@
+                    </div>
                     <div class="b-div">
                         <span class="b-label">
                             到达时间:
