--- a/EmpInfo/Views/K3/AccountReset.cshtml
+++ b/EmpInfo/Views/K3/AccountReset.cshtml
@@ -217,10 +217,10 @@
                         4. 本功能只能处理自己的K3账户。如需处理其他人的K3账户，请登陆OA走流程，流程名是：K3用户重开通或重置申请
                     </p>
                     <p>
-                        5. 如果提示[用户不存在]，表示当前k3账套你没有开通过用户，请登陆OA走流程申请用户，流程名是：K3用户权限申请
+                        5. 如果提示[用户不存在]，表示当前k3账套你没有开通过用户，请走企业微信审批流程申请用户，流程名是：K3用户权限申请
                     </p>
                     <p>
-                        6. 如果提示[职员信息不存在]，表示你已经开通了K3用户，但是没有职员信息，请登陆OA走流程，流程名是：K3用户重开通或重置申请
+                        6. 如果提示[职员信息不存在]，表示你已经开通了K3用户，但是没有职员信息，请走企业微信审批流程，流程名是：K3用户重开通或重置申请
                     </p>
                     <p>
                         7. 如果有其它问题，请联系K3管理员：赖吉全（座机：3009；邮箱：laijiquan@trulyopto.cn）
