增加换货申请流程

--- a/EmpInfo/Views/Apply/BeginApplyUC.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyUC.cshtml
@@ -227,14 +227,14 @@
                             <div class="text-danger small"><i class="fa fa-info-circle"></i> 指预计实物及数据到达物流中心的时间</div>
                         </div>
                     </div>
-                    @*<div class="b-div">
+                    <div class="b-div">
                         <span class="b-label">
                             货运公司:
                         </span>
                         <div class="b-input">
                             <input type="text" class="form-control" name="delivery_company" placeholder="输入货运公司" />
                         </div>
-                    </div>*@
+                    </div>
                     <div class="b-div">
                         <span class="b-label">
                             送货地址:
@@ -258,8 +258,7 @@
                     <div style="display:inline-block;width:70%">
                         <div id="uploader" class="wu-example">
                             <div id="picker"> + </div>
-                        </div>
-                        <p class="small text-danger"><i class="fa fa-info-circle"></i> 必须上传图片证明夜间出货必要性（最多可上传3张）</p>
+                        </div>                        
                     </div>
                     
                     <div class="panel panel-default" id="al_file_panel">
