--- a/EmpInfo/Views/Home/WorkGroupIndex.cshtml
+++ b/EmpInfo/Views/Home/WorkGroupIndex.cshtml
@@ -150,6 +150,12 @@
                     <p class="text-center">物流车辆放行</p>
                 </a>
             </div>
+            <div class="col-xs-4 col-sm-3 col-md-2">
+                <a href="@Url.Content("~/Apply/ApplyIndex?billType=HH")">
+                    <img src="@Url.Content("~/Content/images/hh.png")" class="center-block" />
+                    <p class="text-center">客户换货申请</p>
+                </a>
+            </div>
 
             <div class="col-xs-12 text-danger p-title"><i class="fa fa-th fa-fw"></i> 故障报修</div>
 
