--- a/EmpInfo/Views/Report/TIReport.cshtml
+++ b/EmpInfo/Views/Report/TIReport.cshtml
@@ -86,9 +86,9 @@
             }
 
             toastr.info("数据正在导出，请稍等...");
-            window.location.href = "BeginExportTIExcel?"
+            window.open("BeginExportTIExcel?"
                 + "fromDate=" + $("#fromDate").val()
-                + "&toDate=" + $("#toDate").val()
+                + "&toDate=" + $("#toDate").val())
             ;
         });
 
